Requisito 7, link externo

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <li>MongoDB</li>
 </ul>
 <footer id="rodape">
+    <p>Desenvolvido por <a href="https://www.linkedin.com/in/carolbitencourtt/" target="_blank">Carol Bitencourt</a>.</p>
 </footer>
 </body>
 </html>
