fix code climate, task 14&15

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 </section>
             </section>
             <section>
-                <article class="article">
+                <article class="article lado-esquerdo">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores tempore excepturi, rerum autem temporibus labore obcaecati iste, similique maiores accusamus, corrupti dolore aut eos quod eius officia tenetur! A, placeat?</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sint distinctio quae molestiae ipsum dignissimos nemo nihil quidem, ducimus voluptates natus laudantium soluta commodi veritatis libero amet necessitatibus id iusto.</p>
                 </article>
-                <aside class="aside">
+                <aside class="aside lado-direito">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit quam libero quasi voluptatibus cupiditate eligendi quibusdam harum! Error eveniet perferendis et cumque aliquid facere necessitatibus nisi fuga ad, quaerat nam.
                 </aside>
             </section>
