Realizado ajuste nos requisitos e estilo.

--- a/index.html
+++ b/index.html
@@ -12,22 +12,34 @@
         <h1 id="titulo">Lições Aprendidas</h1>
         <nav id="menu">
             <ul>
-                <li><a href="#pagina-principal">Home</a></li>
-                <li><a href="#rodape">Aprendizado</a></li>
+                <li><a href="#pagina-principal">Sobre</a></li>
+                <li><a href="#licoes_aprendidas">Aprendizado</a></li>
             </ul>
         </nav>
     </header>
     <main id="pagina-principal">
         <img id="minha_foto" src="foto.jpg" alt="Foto Felipe Rocha">
-        <h2 class="titulo">Felipe Rocha</h2>
-        <div id="github-icone">
-            <a href="https://github.com/feliperocha-dev" target="_blank"><img class="icone" src="github.png" alt="Logo Github"><h3>GITHUB</h3></a>
-        </div>
-        <div id="linkedin-icone">
-            <a  href="https://www.linkedin.com/in/felipe-silva-rocha/" target="_blank"><img class="icone" src="linkedin.png" alt="Logo Linkedin"><h3>LINKEDIN</h3></a>                
-        </div>
+        <section id="sobre">  
+            <h2 class="titulo">Sobre Mim</h2>
+            <p>Felipe Rocha<br>
+            Estudante de Desenvolvimento de Software | Trybe<br>
+            Bacharel em Ciência da Computação | Faculdade Pitagoras
+            Belo Horizonte - MG</p>
+            <div id="github-icone">
+                <a href="https://github.com/feliperocha-dev" target="_blank"><img class="icone" src="github.png" alt="Logo Github"><br>GitHub</a>
+            </div>
+            <div id="linkedin-icone">
+                <a  href="https://www.linkedin.com/in/felipe-silva-rocha/" target="_blank"><img class="icone" src="linkedin.png" alt="Logo Linkedin"><br>Linkedin</a>                
+            </div>
+        </section>
         <article id="listas">
             <h2>Lições</h2>
+            <div id="titulo_licoes_aprendidas">
+                <h3>Lições Aprendidas</h3>
+            </div>
+            <div id="titulo_licoes_a_aprender">
+                <h3>Lições a Aprender</h3>
+            </div>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Shell</li>
@@ -63,6 +75,8 @@
         <aside id="lado-direito">
             <h2>Hard e Soft Skills</h2>
             <p>No inicio do curso somos apresentados aos termos hard skills (capacitações técnicas) e soft skills (habilidades comportamentais). Aprendemos que as habilidades comportamentais são tão importantes quanto as técnicas, e que é necessário um treinamento continuo para ambas.</p>
+        </aside>
+        <aside id="lado-direito-tabela">
             <table>
                 <h3>Exemplos de Hard/Soft Skills</h3>
                 <tr>
