Realizado ajuste nos requisitos.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2 class="titulo">Sobre Mim</h2>
             <p>Felipe Rocha<br>
             Estudante de Desenvolvimento de Software | Trybe<br>
-            Bacharel em Ciência da Computação | Faculdade Pitagoras
+            Bacharel em Ciência da Computação | Faculdade Pitagoras<br>
             Belo Horizonte - MG</p>
             <div id="github-icone">
                 <a href="https://github.com/feliperocha-dev" target="_blank"><img class="icone" src="github.png" alt="Logo Github"><br>GitHub</a>
