--- a/index.html
+++ b/index.html
@@ -17,7 +17,36 @@
       <section class="perfil">
         <img src="assets/profile.png" id="minha_foto" alt="Foto de perfil de Luiz Vicentin">
       </section>
-      <section></section>
+      <section>
+        <h3>Lições Aprendidas</h3>
+        <ol id="licoes_aprendidas">
+          <li>Inteligencia Emocional</li>
+          <li>Empatia</li>
+          <li>Unix e Bash</li>
+          <li>Shell Script</li>
+          <li>Git e GitHub</li>
+          <li>Internet - Compreendendo como funciona</li>
+          <li>HTML e CSS - estruturas da página</li>
+          <li>HTML e CSS - Primeiros passos com CSS</li>
+          <li>HTML e CSS - Seletores e posicionamento</li>
+          <li>HTML semântico</li>
+        </ol>
+      </section>
+      <section>
+        <h3>Lições a Aprender</h3>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript e lógica de programação</li>
+          <li>Desenvolvimento Front-end</li>
+          <li>HTML & CSS - Forms</li>
+          <li>Bibliotecas JavaScript e Frameworks CSS</li>
+          <li>CSS Flexbox</li>
+          <li>CSS Responsivo - Mobile First</li>
+          <li>JavaScript ES6</li>
+          <li>Assincronicidade & Callbacks</li>
+          <li>Jest</li>
+          <li>React</li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
