8- Adiciona um artigo a pagina. ✅

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         <li>+ Soft Skills</li>
     </ul>
 
+    <article>
+
+        <h2>Minha experiência com a Trybe</h2>
+        <p>
+            Minha experiência junto a Trybe tem sido muito incrível, intenso, motivador, inspirador e muito rico. Aqui você não aprende somente o conteúdo técnico necessário para o mercado de trabalho, aprendemos valores de soft skills muito importantes e que agregam muito para nosso crescimento enquanto pessoas, e desta forma temos um ensino completo que nos prepara não só para o mercado como também para vida. Esta é a Trybe!
+        </p>
+    </article>
+
     <footer id="rodape">Todos os direitos reservados, Cleber Lopes Teixeira | Trybe - Turma 09 ✌️🚀</footer>
 </body>
 </html>
