--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Caue Lopes</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
-    <img src="thumbnail_Sem título.jpg" alt="Estudante da Trybe" id="minha_foto">
+    <img src="79493722_10221033090878109_600976279600103424_n.jpg" alt="Estudante da Trybe" id="minha_foto">
     <main>
         <section>
             <div>
