add article e aside + css

--- a/index.html
+++ b/index.html
@@ -13,35 +13,47 @@
     </header>
 
     <main>
-        <img src="Assets/fotoPerfil.jpg" alt="Foto de um homem de frente" id="minha_foto">
-        <a href="https://www.linkedin.com/in/pedro-henrique-497b411b6/" target="_blank" id="linkedin">Linkedin</a>
-        <aside id="side-list">
-            <h3 id="learned-learning">Aprendizados e A desenvolver</h3>
-            <ol id="licoes_aprendidas">
-                <li>Unix</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Empatia</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Slack</li>
-                <li>Zoom</li>
-                <li>Inspect</li>
-                <li>Semantic HTML</li>
-            </ol>
-            <ul id="licoes_a_aprender">
-                <li>JavaScript</li>
-                <li>DOM</li>
-                <li>Forms</li>
-                <li>CSS Responsive</li>
-                <li>ES6</li>
-                <li>HOF</li>
-                <li>Unit Tests</li>
-                <li>React</li>
-                <li>Node</li>
-                <li>SQL</li>
-            </ul>
-        </aside>
+        <div id="tresemum">
+            <figure id="foto-link">
+                <img src="Assets/fotoPerfil.jpg" alt="Foto de um homem de frente" id="minha_foto">
+                <a href="https://www.linkedin.com/in/pedro-henrique-497b411b6/" target="_blank" id="linkedin">Linkedin</a>
+            </figure>
+            <section id="section-list">
+                <h3 id="learned-learning">Aprendizados e A desenvolver</h3>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Empatia</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Slack</li>
+                    <li>Zoom</li>
+                    <li>Inspect</li>
+                    <li>Semantic HTML</li>
+                </ol>
+                <ul id="licoes_a_aprender">
+                    <li>JavaScript</li>
+                    <li>DOM</li>
+                    <li>Forms</li>
+                    <li>CSS Responsive</li>
+                    <li>ES6</li>
+                    <li>HOF</li>
+                    <li>Unit Tests</li>
+                    <li>React</li>
+                    <li>Node</li>
+                    <li>SQL</li>
+                </ul>
+            </section>
+            <aside id="aside">
+                <h4>Aside</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi at eaque accusantium veritatis, cum aspernatur quas magnam necessitatibus, quam ab quibusdam officiis? Molestias nulla nesciunt voluptatibus quos culpa nostrum fugiat! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis nemo non in cumque rerum fugiat facere deserunt rem delectus, voluptatem animi laborum commodi corrupti fuga nihil sint ad culpa laudantium. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque vero architecto corrupti similique iure assumenda et voluptate nesciunt amet ducimus voluptates, fuga error aliquid praesentium natus debitis veniam nam enim.</p>
+            </aside>
+            <article id="article">
+                <h4>Artigo</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto assumenda voluptatum aut aperiam aspernatur enim minus, ex numquam beatae harum ut corrupti tenetur quas rerum nostrum veniam consequatur quaerat natus. Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </article>
+        </div>
     </main>
     <footer id="rodape">
         <p>Todos os direitos reservados, Pedro</p>
