--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     </header>
     <main>
       <section class="perfil">
-        <img src="assets/profile.png" id="minha_foto" alt="Foto de perfil de Luiz Vicentin">
+        <img
+          src="assets/profile.png"
+          id="minha_foto"
+          alt="Foto de perfil de Luiz Vicentin"
+        />
       </section>
       <section>
         <h3>Lições Aprendidas</h3>
@@ -50,11 +54,32 @@
     </main>
     <footer id="rodape">
       <p>
-        <a href="https://github.com/luizvicentin" target="blank"><img align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg" alt="luizvicentin" height="20" width="20" /></a>
-        <a href="https://linkedin.com/in/luizvicentin" target="blank"><img align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg" alt="luizvicentin" height="20" width="20" /></a>
-        <a href="https://twitter.com/LuizFVicentin" target="blank"><img align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/twitter.svg" alt="luizvicentin" height="20" width="20" /></a>
-        </p>      
-        <p>© 2020 NV, Inc</p>        
+        <a href="https://github.com/luizvicentin" target="blank"
+          ><img
+            align="center"
+            src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg"
+            alt="luizvicentin"
+            height="20"
+            width="20"
+        /></a>
+        <a href="https://linkedin.com/in/luizvicentin" target="blank"
+          ><img
+            align="center"
+            src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg"
+            alt="luizvicentin"
+            height="20"
+            width="20"
+        /></a>
+        <a href="https://twitter.com/LuizFVicentin" target="blank"
+          ><img
+            align="center"
+            src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/twitter.svg"
+            alt="luizvicentin"
+            height="20"
+            width="20"
+        /></a>
+      </p>
+      <p>© 2020 NV, Inc</p>
     </footer>
   </body>
 </html>
