add table structure

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
               <h2>Alailson Andrade</h2>
               <p> <a href="https://github.com/alailsonko"></a>github</p>
        </div>
-       <div>
-          <h2>Lições</h2>
+       <table>
+
+          <th id="title-table">Lições</th>
+          <tr>
+              <td>
          <ol id="licoes_aprenddidas" >
              <li>git</li>
              <li>github</li>
@@ -34,6 +37,8 @@
              <li>extensions</li>
              <li>internet story</li>
          </ol>
+              </td>
+              <td>
          <ul id="licoes_a_aprender" >
              <li>deploy</li>
              <li>react</li>
@@ -45,7 +50,11 @@
              <li>c</li>
              <li>c++</li>
          </ul>
-       </div>
+              </td>
+          </tr>
+
+
+       </table>
 
    </section>
     <footer id="rodape" >
