corrigir erro de identaçao

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned</h1>
-
-</header> 
+    </header> 
     <img id="minha_foto" src="Frederico Canoeira.JPG" alt="Foto de Frederico Canoeira">
     <section>
         <h4>Lições</h4>
@@ -26,8 +25,6 @@
         <li>Colaboração</li>
         <li>Semantic HTML</li>
     </ol>
-
-    <h4>Lições</h4>
     <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>DOM</li>
@@ -47,14 +44,16 @@
 
     </article>
 
-    <aside>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque.
+    <aside class="artigo" >
+        <h4>Artigo sobre aprendizado</h4>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque.
         </p>
     </aside>
-
+    <a href="https://www.linkedin.com/in/fredericocanoeira/" target="_blank">Linkedin</a>
+    <a href="https://github.com/" target="_blank">GitHub</a>
     <footer id="rodape" >
-        <a href="https://github.com/">GitHub</a>
+        <p>Todos os direitos reservados, Frederico</p>
+        
     </footer>
 </body>
 </html>
