--- a/index.html
+++ b/index.html
@@ -51,7 +51,21 @@
           <li>React</li>
         </ul>
       </section>
+    
+      <section class="articles">
+        <article class="article">
+
+        </article>
+      </section>
+
+      <section class="aside__general">
+        <aside class="aside">
+          
+        </aside>
+      </section>
+
     </main>
+
     <footer id="rodape">
       <p>
         <a href="https://github.com/luizvicentin" target="blank"
