ultima commit do dia, coloquei o aside e arrumei os links

--- a/index.html
+++ b/index.html
@@ -65,21 +65,22 @@
                     Sobre o meu aprendizado
                 </h2>
                 <p>
-                    Aprendi muita coisa nessas quase três semanas que estou estudando aqui na trybe, muitas delas relacionadas ao conteúdo do curso, mas o que surpreendeu mesmo foi o quanto que estou aprendendo sobre ferramentas que vou usar no dia a dia, as soft-skills.
-                    A Introdução do tema Inteligencia Emocional e Empatia me ajudaram a melhorar meus relacionamentos.
+                    Aprendi muita coisa nessas quase três semanas que estou estudando aqui na trybe, muitas delas relacionadas ao conteúdo do curso, mas o que surpreendeu mesmo foi o quanto que estou aprendendo sobre ferramentas que vou usar no dia a dia, as soft-skills. O fato de eu estar interagindo mais com pessoas diferentes, aprendendo a conversar mais e a Introdução do tema Inteligencia Emocional e Empatia me ajudaram até a melhorar meus relacionamentos.
                 </p>
             </article>
             <aside>
-                <h2 id="breve">"...me ajudaram a melhorar meus relacionamentos."</h2>
+                <h2 id="breve">"Apesar de ter apanhado bastante para aprender a mexer em linux, agora eu estou me virando até que bem. Mas as vezes bate uma saudade da facilidade do windows... as vezes."</h2>
             </aside>
-            <article>
-                <h2>
-
-                </h2>
-            </article>
         </section>
             <table>
-
+                <tr><th>The seven rules of a great Git commit message</th></tr>
+                <tr><td>1. Separate subject from body with a blank line</td></tr>
+                <tr><td>2. Limit the subject line to 50 characters</td></tr>
+                <tr><td>3. Capitalize the subject line</td></tr>
+                <tr><td>4. Do not end the subject line with a period</td></tr>
+                <tr><td>5. Use the imperative mood in the subject line</td></tr>
+                <tr><td>6. Wrap the body at 72 characters</td></tr>
+                <tr><td>7. Use the body to explain what and why vs. how</td></tr>
             </table>
             </div>
             <div style="clear: both;"></div>
@@ -87,11 +88,18 @@
                     <h2 id="referencias">References</h2>
                     <a target ="_blank" href="https://css-tricks.com/hash-tag-links-padding/">[1] Como fazer o link interno não se esconder atras do header quando ele é fixo.</a>
                     <a target="_blank" href="https://www.rapidtables.com/convert/color/hex-to-rgb.html">[2] Conversor de cor hex para RGB</a>
+                    <a target="_blank" href="https://chris.beams.io/posts/git-commit/">[3] Como escrever uma boa mensagem de commit</a>
                 </div>
                 <footer id="rodape">
                     <p>Author: Tiago Minoru Yoneda</p>
-                    <p><a id="contact" target="_blank" href="https://github.com/tiago-yoneda">Meu perfil Github</a></p>
-                    <p></p>
+                    <div class="contato">
+                        <div>
+                            <a target="_blank" href="https://www.linkedin.com/in/tiago-yoneda/"><img alt="lindkedin logo" class="icons" src="https://www.flaticon.com/svg/static/icons/svg/174/174857.svg"></a>
+                        </div>
+                        <div>
+                            <a target="_blank" href=""><img alt="github logo" class="icons" src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg"></a>
+                        </div>
+                    </div>
                 </footer>
                 <p style="text-align: center;"><a href="#TOP">TOP</a></p>
     </body>
