--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <main>
       <img id="minha_foto" src="profile-img.jpg" alt="Foto de Renato Feitosa">
-      <h2>As dez lições que aprendi (entre tantas outras)</h2>
+      <h2>As dez lições que aprendi (até agora)</h2>
       <ol id="licoes_aprendidas">
         <li>O <em>Slack</em> é um ótimo ambiente para manter equipes em contato;</li>
         <li>Interações respeitosas são um incentivo à aprendizagem;</li>
@@ -38,6 +38,10 @@
         <li>Noções de arquitetura de <em>software</em> para o planejamento e otimização da programação.</li>
       </ul>
     </main>
+    <article>
+      <h2>Trybe: desenvolvimento humano como etapa essencial ao aprendizado de software</h2>
+      Ao tomar a decisão de, à época dos meus 37 anos, mudar de área e ingressar no desenvolvimento de software, o auto-aprendizado me parecia o caminho mais provável. Apesar de colocar coisas em prática e vender alguns projetos, atingi um estágio em que não conseguia mais evoluir. O sentimento de estagnação e a insegurança para tentar vagas no mercado - sendo "forasteiro" com a minha idade - me dominaram. Foi quando conheci a Trybe, que, descobri, ser uma escola de software em que se ensina que o potencial humano e a coletividade têm tanto valor quanto conhecimentos sobre programação.
+    </article>
     <footer id="rodape">Desenvolvido por Renato Feitosa</footer>
   </body>
 </html>
