--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </main>
     <article>
       <h2>Trybe: desenvolvimento humano como etapa essencial ao aprendizado de software</h2>
-      Ao tomar a decisão de, à época dos meus 37 anos, mudar de área e ingressar no desenvolvimento de software, o auto-aprendizado me parecia o caminho mais provável. Apesar de colocar coisas em prática e vender alguns projetos, atingi um estágio em que não conseguia mais evoluir. O sentimento de estagnação e a insegurança para tentar vagas no mercado - sendo "forasteiro" com a minha idade - me dominaram. Foi quando conheci a Trybe, que, descobri, ser uma escola de software em que se ensina que o potencial humano e a coletividade têm tanto valor quanto conhecimentos sobre programação.
+      Ao tomar a decisão de, à época dos meus 37 anos, mudar de área e ingressar no desenvolvimento de software, o auto-aprendizado me parecia o caminho mais provável. Apesar de colocar coisas em prática e vender <a href="https://pythaqua.github.io/#projetos">alguns projetos</a>, atingi um estágio em que não conseguia mais evoluir. O sentimento de estagnação e a insegurança para tentar vagas no mercado - sendo "forasteiro" com a minha idade - me dominaram. Foi quando conheci a Trybe, que, descobri, ser uma escola de software em que se ensina que o potencial humano e a coletividade têm tanto valor quanto conhecimentos sobre programação.
     </article>
     <footer id="rodape">Desenvolvido por Renato Feitosa</footer>
   </body>
