--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Projeto Trybe</title>
-
+  <img > 
     <ul>
       <h1></h1>
 
@@ -17,9 +17,10 @@
 
 <body>
 
-  <h1 id="cabecalho">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios. by: otc!</h1>
+  <h1 id="cabecalho">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
 
   </head>
+  <img id="minha_foto" src="miau.jpg">
 
 </body>
 
