--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header id="cabecalho">
       <div class="logo">
-        <img src="assets/logo.png" alt="" />
+        <img src="assets/logo.png" alt="Logo NV, Inc" />
       </div>
       <h1 id="titulo">Lições Aprendidas na Trybe!</h1>
     </header>
@@ -22,7 +22,7 @@
         />
       </section>
       <section>
-        <h3>Lições Aprendidas</h3>
+        <h3><a href="https://www.betrybe.com/">Lições Aprendidas</a></h3>
         <ol id="licoes_aprendidas">
           <li>Inteligencia Emocional</li>
           <li>Empatia</li>
@@ -37,7 +37,7 @@
         </ol>
       </section>
       <section>
-        <h3>Lições a Aprender</h3>
+        <h3><a href="https://www.betrybe.com/">Lições a Aprender</a></h3>
         <ul id="licoes_a_aprender">
           <li>JavaScript e lógica de programação</li>
           <li>Desenvolvimento Front-end</li>
@@ -51,21 +51,13 @@
           <li>React</li>
         </ul>
       </section>
-    
       <section class="articles">
-        <article class="article">
-
-        </article>
+        <article class="article"></article>
       </section>
-
       <section class="aside__general">
-        <aside class="aside">
-          
-        </aside>
+        <aside class="aside"></aside>
       </section>
-
     </main>
-
     <footer id="rodape">
       <p>
         <a href="https://github.com/luizvicentin" target="blank"
