--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <img src="assets/logo.png" alt="Logo NV, Inc" />
       </div>
       <h1 id="titulo">Lições Aprendidas na Trybe!</h1>
+      <nav>
+        <ul>
+           <li><a href="">Home</a></li>
+           <li><a href="">Lições</a></li>
+           <li><a href="">Contato</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section class="perfil">
@@ -20,6 +27,7 @@
           id="minha_foto"
           alt="Foto de perfil de Luiz Vicentin"
         />
+        <h2>Luiz Fernando Vicentin</h2>
       </section>
       <section>
         <h3><a href="https://www.betrybe.com/">Lições Aprendidas</a></h3>
