--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
     </aside>
     <a href="https://www.linkedin.com/in/fredericocanoeira/" target="_blank">Linkedin</a>
     <a href="https://github.com/" target="_blank">GitHub</a>
-    <footer id="rodape" >
-        <p>Todos os direitos reservados, Frederico</p> 
+    <footer id="rodape">
+    </footer>
+    <p>Todos os direitos reservados, Frederico</p> 
     </footer>
 </body>
 </html>
