--- a/index.html
+++ b/index.html
@@ -12,58 +12,60 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned</h1>
         <nav id="nav-link">
-            <a class="link" href="https://www.linkedin.com/in/ggaldino95/" target="_blank"><i id="icon" class="fa fa-linkedin"></i> LinkedIn</a>
-            <a class="link" href="https://github.com/GGaldino95" target="_blank"><i id="icon" class="fa fa-github"></i> GitHub</a>
+            <a class="link" href="https://www.linkedin.com/in/ggaldino95/" target="_blank"><span class=" fa icon fa-linkedin"></span> LinkedIn</a>
+            <a class="link" href="https://github.com/GGaldino95" target="_blank"><span class="icon fa fa-github"></span> GitHub</a>
         </nav>
     </header>
     <main id="conteudo">
-        <section>
+        <section id="box">
             <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
+        </section>
+        <div id="list-box">
             <table id="table">
                 <tr>
-                    <th>Nome</th>
-                    <td>Gabriel <span>Gal</span>dino</td>
+                    <th>Nome:</th>
+                    <td>Gabriel <span class="highlight-word">Gal</span>dino</td>
                 </tr>
                 <tr>
-                    <th>Idade</th>
+                    <th>Idade:</th>
                     <td>25</td>
                 </tr>
                 <tr>
-                    <th>Turma</th>
+                    <th>Turma:</th>
                     <td>09</td>
                 </tr>
             </table>
-        </section>
-        <section>
-            <h2>Lições Aprendidas:</h2>
-            <ol id="licoes_aprendidas">
-                <li>Fundamentos do Desenvolvimento Web</li>
-                <li>Introdução - Unix & Shell</li>
-                <li>Unix & Bash</li>
-                <li>Git & GitHub - <em>O que é e pra que serve?</em></li>
-                <li>Git & GitHub - <em>Entendendo comandos</em></li>
-                <li>Fundamentos da Internet - <em>Como ela funciona?</em></li>
-                <li>HTML & CSS - Estrutura de Página</li>
-                <li>HTML & CSS - Iniciando com CSS</li>
-                <li>HTML & CSS - Seletores e Posicionamento</li>
-                <li>HTML Semântico</li>
-            </ol>
-        </section>
-        <section>
-            <h2>Lições que desejo aprender ainda:</h2>
-            <ul id="licoes_a_aprender">
-                <li>Javascript</li>
-                <li>React</li>
-                <li>Metodologias Ágeis</li>
-                <li>Redux</li>
-                <li>SQL</li>
-                <li>MongoDB</li>
-                <li>NodeJS</li>
-                <li>Frameworks</li>
-                <li>Python</li>
-                <li>Soft Skills</li>
-            </ul>
-        </section>
+            <section id="licoes_aprendidas">
+                <h2>Lições Aprendidas:</h2>
+                <ol>
+                    <li>Fundamentos do Desenvolvimento Web</li>
+                    <li>Introdução - Unix & Shell</li>
+                    <li>Unix & Bash</li>
+                    <li>Git & GitHub - <em>O que é e pra que serve?</em></li>
+                    <li>Git & GitHub - <em>Entendendo comandos</em></li>
+                    <li>Fundamentos da Internet - <em>Como ela funciona?</em></li>
+                    <li>HTML & CSS - Estrutura de Página</li>
+                    <li>HTML & CSS - Iniciando com CSS</li>
+                    <li>HTML & CSS - Seletores e Posicionamento</li>
+                    <li>HTML Semântico</li>
+                </ol>
+            </section>
+            <section id="licoes_a_aprender">
+                <h2>Lições que desejo aprender ainda:</h2>
+                <ul>
+                    <li>Javascript</li>
+                    <li>React</li>
+                    <li>Metodologias Ágeis</li>
+                    <li>Redux</li>
+                    <li>SQL</li>
+                    <li>MongoDB</li>
+                    <li>NodeJS</li>
+                    <li>Frameworks</li>
+                    <li>Python</li>
+                    <li>Soft Skills</li>
+                </ul>
+            </section>
+        </div>
         <h2>Trajetória - <em>A New Hope</em></h2>
         <section>
             <article id="artigo">
