--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1 id="titulo">Lições Aprendidas na Trybe!</h1>
       <nav>
         <ul>
-           <li><a href="">Home</a></li>
-           <li><a href="">Lições</a></li>
-           <li><a href="">Contato</a></li>
+           <li><a href="#">Home</a></li>
+           <li><a href="#licoes_aprendidas">Lições</a></li>
+           <li><a href="#rodape">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -29,8 +29,8 @@
         />
         <h2>Luiz Fernando Vicentin</h2>
       </section>
-      <section>
-        <h3><a href="https://www.betrybe.com/">Lições Aprendidas</a></h3>
+      <section> 
+        <h3>Lições Aprendidas</h3>
         <ol id="licoes_aprendidas">
           <li>Inteligencia Emocional</li>
           <li>Empatia</li>
@@ -45,7 +45,7 @@
         </ol>
       </section>
       <section>
-        <h3><a href="https://www.betrybe.com/">Lições a Aprender</a></h3>
+        <h3>Lições a Aprender</h3>
         <ul id="licoes_a_aprender">
           <li>JavaScript e lógica de programação</li>
           <li>Desenvolvimento Front-end</li>
@@ -60,7 +60,7 @@
         </ul>
       </section>
       <section class="articles">
-        <article class="article"></article>
+        <article class="article"><a href="https://www.betrybe.com/"></a></article>
       </section>
       <section class="aside__general">
         <aside class="aside"></aside>
