--- a/index.html
+++ b/index.html
@@ -43,10 +43,18 @@
                 <li>MongoDB</li>
             </ul>
         </section>
+        <article id="artigo_aprendizado">
+            <h2>Inicio na Trybe</h2>
+            <p></p>
+        </article>  
     </main>
+    <aside id="experiencia">
+        <p>"Os primeiros dias na trybe foram incriveis. toda a receptividade, o ambiente, a facilidade em se comunicar. Não tenho duvida alguma de que foi a melhor decisão que já tomei na vida...já se passaram 3 semanas e a cada dia que passa o sentimento é realmente de ter feito a excolha certa"</p>
+    </aside>
     <footer id="rodape">
         <p>Desenvolvido por <a href="https://github.com/Diego-Vini" target="_blank">@Diego-Vini</a> <strong>|</strong> todos os direitos reservados.</p>
     </footer>
+   
 
 </body>
 </html>
