--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </ul>
       </section>
       <section class="articles">
-        <article class="article"><a href="https://www.betrybe.com/"></a></article>
+        <article class="article"><a href="https://www.betrybe.com/" target="_blank">Trybe</a></article>
       </section>
       <section class="aside__general">
         <aside class="aside"></aside>
