Ultimo commit de terça

--- a/index.html
+++ b/index.html
@@ -26,20 +26,29 @@
                 <li>Inspect</li>
                 <li>Forms</li>
             </ol>
-            <ol type="1" class="list" id="licoes_a_aprender">
+            <ul type="1" class="list" id="licoes_a_aprender">
                 <h3>Lista de coisas para aprender</h3>
                 <li>JavaScript</li>
                 <li>React</li>
                 <li>Node.js</li>
                 <li>Soft Skills</li>
-            </ol>
+                <li>SQL</li>
+                <li>Express.js</li>
+                <li>Backend</li>
+                <li>Liderança</li>
+                <li>Pensamento critico</li>
+                <li>Criatividade</li>
+            </ul>
         </nav>
-        <article> ARTIGO COM A TAG ARTICLE AQUI. Vivamus a feugiat libero, sed tincidunt ex. Duis sed diam dolor. Sed in ligula ac neque feugiat maximus consectetur quis felis. Suspendisse potenti. Vestibulum nec erat vel urna vehicula ornare. Praesent at magna congue, convallis diam quis, rhoncus tellus. Proin ut erat pulvinar, imperdiet diam id, mattis felis. Cras et nisl tortor. Nunc ornare a neque ut lacinia. Nunc et congue diam. Fusce rhoncus neque at lectus accumsan nullam sodales.</article>
-        <section id="section">
-            <aside>
-                Aqui é uma seção com a tag aside. (Contando sobre o meu aprendizado na trybe que deve ter entre 100 letras e 300 letras
-            </aside>
-        </section>
+        <div class="caixas">
+               <article id="artigo"> ARTIGO COM A TAG ARTICLE AQUI. Vivamus a feugiat libero, sed tincidunt ex. Duis sed diam dolor. Sed in ligula ac neque feugiat maximus consectetur quis felis. Suspendisse potenti. Vestibulum nec erat vel urna vehicula ornare. Praesent at magna congue, convallis diam quis, rhoncus tellus. Proin ut erat pulvinar, imperdiet diam id, mattis felis. Cras et nisl tortor. Nunc ornare a neque ut lacinia. Nunc et congue diam. Fusce rhoncus neque at lectus accumsan nullam sodales.</article>
+            <section id="section">
+                <aside id="aside">
+                    Aqui é uma seção com a tag aside. (Contando sobre o meu aprendizado na trybe que deve ter entre 100 letras e 300 letras
+                </aside>
+            </section>
+        </div>
+     
 
     </main>
     <footer id="rodape">
