--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
     <title>Lessons Learned</title>
 </head>
 <body>
-<header id="cabecalho" >
+<nav id="cabecalho" >
     <h1 id="title" >Lições aprendidas na trybe</h1>
     <ul>
         <li>Home</li>
         <li>Login</li>
     </ul>
-</header>
-   <section>
-       <div>
-              <img src="./image.jpeg" alt="minha-foto">
+</nav>
+<div class="main" >
+ <aside>
+        <div>
+              <img id="profile-pic" src="./image.jpeg" alt="alailsonko">
               <h2>Alailson Andrade</h2>
-              <p> <a href="https://github.com/alailsonko"></a>github</p>
+            <a href="https://github.com/alailsonko">github</a>
        </div>
-       <table>
+  </aside>
 
+          <section>
+       <table>
+        <caption>Lições aprendidas e a aprender</caption>
           <th id="title-table">Lições</th>
           <tr>
               <td>
@@ -52,11 +56,14 @@
          </ul>
               </td>
           </tr>
-
-
        </table>
-
+       <div id="article">
+           <article>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"</article>
+           <article>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</article>
+       </div>
    </section>
+</div>
+
     <footer id="rodape" >
           <p>made by alailson</p>
     </footer>
