--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </ul>
 
   <article>
-        <h2>Sobre meu aprendizado na Trybe</h2>
-        <p>O aprendizado na Trybe é muito <strong>gratificante</strong>, todo dia temos contato com a prática, assim podemos exercicitar o que aprendemos nas aulas do dia. Para desenvolver os exercícios é necessário estudar bastante, de quando comecei para hoje já aprendi muita coisa nova, é possivel ver acima a lista de coisas que aprendi em apenas 10 dias de curso 
+    <h2>Sobre meu aprendizado na Trybe</h2>
+    <p>O aprendizado na Trybe é muito <strong>gratificante</strong>, todo dia temos contato com a prática, assim podemos exercicitar o que aprendemos nas aulas do dia. Para desenvolver os exercícios é necessário estudar bastante, de quando comecei para hoje já aprendi muita coisa nova, é possivel ver acima a lista de coisas que aprendi em apenas 10 dias de curso.
         </p>
      </article>
 
