requisito 8 inserindo texto de aprendizado + css article

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       </ul>
       <a href="https://www.linkedin.com/in/perycles-floriano-45b177155/" target="_blank">Linkedin</a>
     </section>
+    <section>
+      <article id="article">
+        <p>Bom o que dizer? Desde que iniciei os estudos na Trybe, tive muitas experiências boas de aprendizado, como utilizar o terminal e o git de forma eficiente e organizada para realizar meus trabalhos seculares e também as atividades da Trybe, compartilhar o conhecimento adquirido com meus colegas de turma e aprender também com eles assim desenvolvendo minhas soft skills.</p>
+      </article>
+    </section>
   </main>
   <footer id="rodape">
     <p><strong>Development by for Perycles R. Floriano.</strong> </p>
