09- Adiciona uma seçao a pagina. ✅

--- a/index.html
+++ b/index.html
@@ -46,13 +46,19 @@
     </ul>
 
     <article>
-
-        <h2>Minha experiência com a Trybe</h2>
-        <p>
-            Minha experiência junto a Trybe tem sido muito incrível, intenso, motivador, inspirador e muito rico. Aqui você não aprende somente o conteúdo técnico necessário para o mercado de trabalho, aprendemos valores de soft skills muito importantes e que agregam muito para nosso crescimento enquanto pessoas, e desta forma temos um ensino completo que nos prepara não só para o mercado como também para vida. Esta é a Trybe!
-        </p>
+      <h2>Minha experiência com a Trybe</h2>
+      <p>
+          Minha experiência junto a Trybe tem sido muito incrível, intenso, motivador, inspirador e muito rico. Aqui você não aprende somente o conteúdo técnico necessário para o mercado de trabalho, aprendemos valores de soft skills muito importantes e que agregam muito para nosso crescimento enquanto pessoas, e desta forma temos um ensino completo que nos prepara não só para o mercado como também para vida. <em>Esta é a Trybe!</em> 😎👍
+      </p>
     </article>
 
-    <footer id="rodape">Todos os direitos reservados, Cleber Lopes Teixeira | Trybe - Turma 09 ✌️🚀</footer>
+    <aside>
+      <h2>Minha evolução com HTML & CSS</h2>
+      <p>
+        Até pouco tempo atrás minha páginas profissionais eu as estruturava de maneira muito amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma evolução muito grande. Então o que posso dizer é: <em>Vamo que vamo!!!</em> ✌️🚀 <em>#goTrybe</em>
+      </p>
+    </aside>
+
+    <footer id="rodape"><em>Todos os direitos reservados, Cleber Lopes Teixeira | Trybe - Turma 09</em> ✌️🚀</footer>
 </body>
 </html>
