adicionar mais 2 requisitos

--- a/index.html
+++ b/index.html
@@ -38,14 +38,19 @@
         <li>SQL</li>
     </ul>
     </section>
+    <td>
+      <tr></tr>
+
+    </td>
 
     <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum totam pariatur quisquam dicta dolor ipsa laudantium in facilis dolorum temporibus! Nisi ullam provident blanditiis nostrum asperiores natus distinctio recusandae rerum?</p>
+        <h4>Artigo sobre o aprendizado</h4>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque </p>
 
     </article>
 
     <aside class="artigo" >
-        <h4>Artigo sobre aprendizado</h4>
+        <h4>Passagem sobre aprendizado</h4>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque.
         </p>
     </aside>
