--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Projeto Trybe</title>
+
   <img >
     <ul>
       <h1></h1>
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+  <title id="titulo">Projeto Trybe</title>
   <h1 id="cabecalho">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
 
   </head>
