--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
       </ul>
     </main>
     <article>
-      <h2>Trybe: desenvolvimento humano como etapa essencial ao aprendizado de software</h2>
-      Ao tomar a decisão de, à época dos meus 37 anos, mudar de área e ingressar no desenvolvimento de software, o auto-aprendizado me parecia o caminho mais provável. Apesar de colocar coisas em prática e vender <a href="https://pythaqua.github.io/#projetos">alguns projetos</a>, atingi um estágio em que não conseguia mais evoluir. O sentimento de estagnação e a insegurança para tentar vagas no mercado - sendo "forasteiro" com a minha idade - me dominaram. Foi quando conheci a Trybe, que, descobri, ser uma escola de software em que se ensina que o potencial humano e a coletividade têm tanto valor quanto conhecimentos sobre programação.
+      <h2>Trybe: coletividade é a condição para nos tirar do loop</h2>
+      <p>
+        Ao tomar a decisão de, à época dos meus 37 anos, mudar de área e ingressar no desenvolvimento de software, o auto-aprendizado me parecia o caminho mais provável. Apesar de colocar coisas em prática e vender <a href="https://pythaqua.github.io/#projetos">alguns projetos</a>, atingi um estágio em que não conseguia mais evoluir. O sentimento de estagnação e a insegurança para tentar vagas no mercado - sendo "forasteiro" com a minha idade - me dominaram. Foi quando conheci a Trybe, que, descobri, ser uma escola de software em que se ensina que o potencial humano e a coletividade têm tanto valor quanto conhecimentos sobre programação.
+      </p>
+      <aside>
+        <p>Diante da frieza dos códigos e pressão dos prazos, a escola valoriza o que há de mais essencial ao mercado: as pessoas. A Trybe resgata o desenvolvimento humano como etapa essencial ao aprendizado de software ao oferecer acesso a especialistas em psicologia e dedicando valiosas horas à prática de soft skills e do autoconhecimento.</p>
+      </aside>
     </article>
     <footer id="rodape">Desenvolvido por Renato Feitosa</footer>
   </body>
