--- a/index.html
+++ b/index.html
@@ -60,10 +60,16 @@
         </ul>
       </section>
       <section class="articles">
-        <article class="article"><a href="https://www.betrybe.com/" target="_blank">Trybe</a></article>
+        <article class="article"><a href="https://www.betrybe.com/" target="_blank"><h3>Trybe</h3></a>
+        <p>O Grupo, a Equipe, a ESCOLA Trybe é algo diferenciado, algo que so vivendo pra saber! Desculpa por isso, não dá para resumir o tanto que aprendemos e nos desenvolvemos em menos de 1 mes!! Aquecimento, Dinámicas, Aula ao Vivo, Feedbacks, Fechamento, .. eeee Projeto!! É demais!!!</p>
+        </article>
       </section>
       <section class="aside__general">
-        <aside class="aside"></aside>
+        <aside class="aside">
+          <h3></h3>
+          <p>Você já parou pra pensar o que uma escola pode oferecer para seus alunos? Já pensou na experiencia que essa escola pode proporcionar? Ou Você acha que a escola tem que ensinar e ponto final?
+            São muitas respostas, e tenho certeza que cada um de nós tem uma resposta pra cada uma dessas perguntas. E hoje, depois de terminar o Primeiro Projeto da Trybe, minha resposta mudou, minha visão mudou, minha experiencia mudou, e eu só tenho a agradecer por isso!</p>
+        </aside>
       </section>
     </main>
     <footer id="rodape">
