--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
                 </ul>
             </div>
         </section>
-        <article class="lado-esquerdo">
-            <p>2020 foi um ano de grandes mudanças, mundiais e pessoais. <br> Este ano mudou totalmente, eu fui da aviação para tecnologia. <br> Depois de formado piloto de avião e três anos trabalhando na Latam, iniciei a faculdade de Análise e Desenvolvimento de Sistemas e ingressei em um dos concursos mais concorridos do Brasil na trybe e agora estou desenvolvendo junto com a trybe um modelo inovador de educação e aprendendo desenvolvimento web.
-             O curso nos ensina: Construir um front-end, Soft skills, Construir um back-end, Algoritmos, Metodologias Ágeis, Rotinas de desenvolvimento.</p>
-        </article>
-        <aside class="lado-direito">
-            <p>O Curso é desafiador e ao mesmo tempo incentivador, contamos com os melhores recursos e ótimos instrutores!</p>
-        </aside>
+        <section id="section2">
+            <article class="lado-esquerdo">
+                <p>2020 foi um ano de grandes mudanças, mundiais e pessoais. <br> Este ano mudou totalmente, eu fui da aviação para tecnologia. <br> Depois de formado piloto de avião e três anos trabalhando na Latam, iniciei a faculdade de Análise e Desenvolvimento de Sistemas e ingressei em um dos concursos mais concorridos do Brasil na trybe e agora estou desenvolvendo junto com a trybe um modelo inovador de educação e aprendendo desenvolvimento web. </p>
+                
+            </article>
+            <aside class="lado-direito">
+                <p id="secao">O Curso é desafiador e ao mesmo tempo incentivador, contamos com os melhores recursos e ótimos instrutores!</p>
+            </aside>
+        </section>
     </main>
     <footer id="rodape">
        <nav>
